--- a/android_webview/common/BUILD.gn
+++ b/android_webview/common/BUILD.gn
@@ -71,6 +71,7 @@ source_set("common") {
     "//ui/gfx/ipc/geometry",
     "//ui/gfx/ipc/skia",
     "//url",
+    "//chrome/browser:brave_blockers",
   ]
 }
 
